Create and use Cocoa specific layout constants

As Views based UI is undergoing new changes, that applies to MacViews
browser as well, but diverges from Cocoa based browser. This CL solves
that problem by creating a function for Cocoa browser only. This
function can get Cocoa specific constants which won't be affected by
Views side of changes.

BUG=838630,838856
TEST=Pls make sure bookmark bar, icons and menus look ok for both Cocoa
version and MacViews version on Mac. They should be same as before for
other platforms.

Change-Id: I73152c05cfac77eb6b24a4d6204acb78767c833d
Reviewed-on: https://chromium-review.googlesource.com/1041141
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555762}
Former-commit-id: c29efd57272886b45e3becd47976e31d9228d0a2